Ajustes para funcionar no linux